discussion/kv_engine/128634/128634_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Introduce X-macro statistics definitions

With the introduction of Prometheus as a stats output, more information
is needed for each statistic. Rather than inline everything, stats can
now be declared in stats.def.h and referenced through the
cb::stats::StatKey enum.

Stats can be declared with:

 - units (e.g., microseconds)
 - metric family name
 - key-value labels

These new pieces of information are not used by the existing CBStats
output (but could be in the future). They are added to support
Prometheus stats. Before exposition, stats must be scaled to base units
(seconds, bytes - see https://prometheus.io/docs/practices/naming/ )
and appropriately suffixed.

Metric family names may be used to logically group stats which
represent variants of the same underlying stat. Rather than having
stats like "get_cmd" and "set_cmd" which are only identifiable as
related by the suffix convention, Prometheus can instead represent
these as two stats with the same metric name but different labels
(for example)

 cmd_time_taken_seconds{"op"="get"}
 cmd_time_taken_seconds{"op"="set"}

To do so, the stats could be declared as:

 STAT(get_cmd, microseconds, "cmd_time_taken", "op", "get")
 STAT(set_cmd, microseconds, "cmd_time_taken", "op", "set")

Note, the unit indicates the unit of the value tracked in kv_engine -
Prometheus exposition will _always_ scale the stat to the base unit
from whatever unit is provided - here the value would be divided by
10e6 to get a quantity in seconds.

Given the large number of existing stats, this functionality is all
opt-in for now. CBStats output will remain unchanged.

Change-Id: I3789681c1a35082a34c9ca90992a257f24a02f28

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-06-16 10:15:40.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-16 10:43:20.000000000
Message: 
Patch Set 8: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1270/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/include/statistics/all_stats.h b/include/statistics/all_stats.h
index 65822c9..6a80515 100644
--- a/include/statistics/all_stats.h
+++ b/include/statistics/all_stats.h
@@ -140,7 +140,6 @@ enum StatKey {
 
 using keys::StatKey;
 
-
 using namespace units;
 
 #define STAT(statName, unit, prometheusName, labelKey, labelValue) \
diff --git a/include/statistics/stats.def.h b/include/statistics/stats.def.h
index 23d3f5d..33cde30 100644
--- a/include/statistics/stats.def.h
+++ b/include/statistics/stats.def.h
@@ -84,9 +84,13 @@ STAT(disk_del, microseconds, disk, op, del)
 STAT(disk_vb_del, microseconds, disk, op, vb_del)
 STAT(disk_commit, microseconds, disk, op, commit)
 STAT(item_alloc_sizes,
-     bytes,,,) // TODO: this is not timing related but is in doTimingStats
+     bytes,
+     ,
+     , ) // TODO: this is not timing related but is in doTimingStats
 STAT(bg_batch_size,
-     count,,,) // TODO: this is not timing related but is in doTimingStats
+     count,
+     ,
+     , ) // TODO: this is not timing related but is in doTimingStats
 STAT(persistence_cursor_get_all_items,
      microseconds,
      cursor_get_all_items_time,

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1270/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24590/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24590/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2766/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:6: error: use of undeclared identifier "bg_wait" [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:15: error: use of undeclared identifier "microseconds" [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:29: error: expected expression [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:31: error: expected expression [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:33: error: expected expression [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:34: error: expected ";" after top level declarator [clang-diagnostic-error]
STAT(bg_wait, microseconds, , , )
                                 ^
                                 ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2766/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2766/ )
----------------------------------------------------------------------------------------------------------------------
